--- a/m1-score_reviews_via_service.ipynb
+++ b/m1-score_reviews_via_service.ipynb
@@ -20,33 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package movie_reviews to\n",
-      "[nltk_data]     /Users/pravarsrivastava/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk import download\n",
     "\n",
@@ -64,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,18 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (3513199392.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def score_review(review):   \n",
     "    # COMPLETE THIS FUNCTION:\n",
@@ -119,6 +90,18 @@
     "    # \n",
     "    # Your function will need to return 'pos' if a review is positive and\n",
     "    # 'neg' if the review is negative\n",
+    "    import boto3\n",
+    "    import json\n",
+    "    ACCESS_KEY = \"AKIAQVMJX6EHXZ4MO5FQ\"\n",
+    "    abc = 'X9LjaFBWMTbuEVYhApzEACDi7KOFHsBG48xf5u48'\n",
+    "    session = boto3.Session(aws_access_key_id=ACCESS_KEY,aws_secret_access_key=abc)\n",
+    "    region = \"us-east-1\"\n",
+    "    comprehend = boto3.client(service_name='comprehend', region_name= region)\n",
+    "    text = \"It is raining today in Seattle\"\n",
+    "\n",
+    "    print('Calling DetectSentiment')\n",
+    "    print(json.dumps(comprehend.detect_sentiment(Text=review, LanguageCode='en'), sort_keys=True, indent=4))\n",
+    "    print('End of DetectSentiment\\n')\n",
     "    "
    ]
   },
@@ -133,9 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reviews_pos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Create 2 smaller subsets for testing\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m subset_pos \u001b[38;5;241m=\u001b[39m \u001b[43mreviews_pos\u001b[49m[:\u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m      3\u001b[0m subset_neg \u001b[38;5;241m=\u001b[39m reviews_neg[:\u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m      5\u001b[0m results_pos \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reviews_pos' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create 2 smaller subsets for testing\n",
     "subset_pos = reviews_pos[:10]\n",
@@ -165,9 +160,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'results_pos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m correct_pos \u001b[38;5;241m=\u001b[39m \u001b[43mresults_pos\u001b[49m\u001b[38;5;241m.\u001b[39mcount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpos\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m accuracy_pos \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(correct_pos) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(results_pos)\n\u001b[1;32m      3\u001b[0m correct_neg \u001b[38;5;241m=\u001b[39m results_neg\u001b[38;5;241m.\u001b[39mcount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'results_pos' is not defined"
+     ]
+    }
+   ],
    "source": [
     "correct_pos = results_pos.count('pos')\n",
     "accuracy_pos = float(correct_pos) / len(results_pos)\n",
@@ -180,6 +187,13 @@
     "print('Negative reviews: {}% correct'.format(accuracy_neg*100))\n",
     "print('Overall accuracy: {}% correct'.format(accuracy_all*100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
