--- a/m1-score_reviews_via_service.ipynb
+++ b/m1-score_reviews_via_service.ipynb
@@ -92,8 +92,8 @@
     "    # 'neg' if the review is negative\n",
     "    import boto3\n",
     "    import json\n",
-    "    ACCESS_KEY = \"AKIAQVMJX6EHXZ4MO5FQ\"\n",
-    "    abc = 'X9LjaFBWMTbuEVYhApzEACDi7KOFHsBG48xf5u48'\n",
+    "    ACCESS_KEY = \"foo\"\n",
+    "    abc = 'bar'\n",
     "    session = boto3.Session(aws_access_key_id=ACCESS_KEY,aws_secret_access_key=abc)\n",
     "    region = \"us-east-1\"\n",
     "    comprehend = boto3.client(service_name='comprehend', region_name= region)\n",
